--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appnope==0.1.0
 backcall==0.1.0
 certifi==2019.11.28
 chardet==3.0.4
+cycler==0.10.0
 decorator==4.4.1
 idna==2.8
 ipykernel==5.1.3
@@ -10,16 +11,24 @@ ipython-genutils==0.2.0
 jedi==0.15.2
 jupyter-client==5.3.4
 jupyter-core==4.6.1
+kiwisolver==1.1.0
+matplotlib==3.1.2
+numpy==1.18.1
+pandas==0.25.3
 parso==0.5.2
 pexpect==4.7.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.2
 ptyprocess==0.6.0
 Pygments==2.5.2
+pyparsing==2.4.6
 python-dateutil==2.8.1
 python-unibit==1.0.1
+pytz==2019.3
 pyzmq==18.1.1
 requests==2.22.0
+scipy==1.4.1
+seaborn==0.9.0
 six==1.13.0
 tornado==6.0.3
 traitlets==4.3.3
